Bloecke leichter lesbar

--- a/kcpascal51_dasm/Makefile
+++ b/kcpascal51_dasm/Makefile
@@ -2,15 +2,25 @@
 
 all: pascal51.asm
 
+diff:
+	-[ -r p51.asm ] && diff -du p51.asm pascal51.asm > p51.patch ; true
+
+patch:
+	[ -r p51.patch ] && patch pascal51.asm p51.patch
+
 pascal51.asm: pascal51_kcc.bin p51.block p51.sym
-	@z80dasm -a -b p51.block -g 0x200 -l -S p51.sym -s p51.symout -t -u -o pascal51.asm pascal51_kcc.bin
+	-[ -r p51.asm ] && diff -du p51.asm pascal51.asm > p51.patch ; true
+	@z80dasm -a -b p51.block -g 0x200 -l -S p51.sym -s p51.symout -t -u -o p51t.asm pascal51_kcc.bin
+	@z80dasm -b p51.block -g 0x200 -l -S p51.sym -s p51.symout -u -o pascal51.asm pascal51_kcc.bin
+	cp pascal51.asm p51.asm
+	[ -r p51.patch ] && patch pascal51.asm p51.patch
 
 pascal51_kcc.bin: pascal51.kcc
 	@dd if=pascal51.kcc bs=128 skip=1 of=pascal51_kcc.bin status=none
 
 .PHONY: clean distclean
 clean:
-	-rm *~ p51.symout
+	-rm -f *~ p51.symout p51t.asm
 
 distclean: clean
-	-rm pascal51_kcc.bin
+	-rm -f pascal51_kcc.bin p51.asm p51.asm.orig p51.asm.rej
