--- a/kcpascal5/pasex2/Makefile
+++ b/kcpascal5/pasex2/Makefile
@@ -5,7 +5,7 @@ SHELL := bash
 %.bin: %.asm
 	pasmo $< $@
 
-pasex2.kcc: pasex2.asm pasex2.inc px2init_dummy.bin px2sozei_dummy.bin px2org.inc px2kern_dummy.bin
+pasex2.kcc: pasex2.asm pasex2.inc px2init_dummy.bin px2org.inc px2kern_dummy.bin
 	pasmo -d pasex2.asm pasex20.bin > pasex2_pasmo.asm
 	../bincut.pl -i pasex20.bin -o pasex2.kcc \
 	  -b $$( od -v -t x1 \
@@ -15,14 +15,12 @@ pasex2.kcc: pasex2.asm pasex2.inc px2init_dummy.bin px2sozei_dummy.bin px2org.in
 	  -a $$( od -v -t x1 -N 5 px2kern_dummy.bin | \
 	         head -1 | cut -d \  -f 2- | tr ' ' , )
 
-px2init_dummy.bin: px2init_dummy.asm pas_gdef.inc px2var.inc px2init.inc px2sozei.inc
+px2init_dummy.bin: px2init_dummy.asm pas_gdef.inc px2var.inc px2init.inc
 px2kern_dummy.bin: px2kern_dummy.asm pas_gdef.inc px2kern.inc px2var.inc
-px2sozei_dummy.bin: px2sozei_dummy.asm pas_gdef.inc px2sozei.inc
 
-px2org.inc: px2kern_dummy.bin px2sozei_dummy.bin
+px2org.inc: px2kern_dummy.bin
 	printf "\torg 0x%4x\n" \
-	  $$(( 0xc000 - $$(stat -c %s px2kern_dummy.bin) - \
-	       $$(stat -c %s px2sozei_dummy.bin) )) > px2org.inc
+	  $$(( 0xc000 - $$(stat -c %s px2kern_dummy.bin) )) > px2org.inc
 
 for_inc: pasex2.inc px2init_dummy.bin px2org.inc
 
