KC-Pascal Version 5.2, PasEx2

--- a/kcpascal5/Makefile
+++ b/kcpascal5/Makefile
@@ -12,10 +12,10 @@ asm = pasmo
 #	       $$(stat -c %s ../sozei_dummy.bin) )) > px2org.inc
 
 
-pas51x.kcc: pas51x.asm pas_gdef.inc pasex2/px2org.inc sozei_dummy.bin
+pas5x.kcc: pas5x.asm pas_gdef.inc pasex2/px2org.inc sozei_dummy.bin
 	$(MAKE) -C pasex2 for_inc
-	pasmo -d -I pasex2 pas51x.asm pas51x0.bin > pas51x_pasmo.asm
-	./bincut.pl -i pas51x0.bin -o pas51x.kcc \
+	pasmo -d -I pasex2 pas5x.asm pas5x0.bin > pas5x_pasmo.asm
+	./bincut.pl -i pas5x0.bin -o pas5x.kcc \
 	  -b $$( od -v -t x1 \
                  -j $$(( $$(stat -c %s pasex2/px2init_dummy.bin) - 5 )) \
 	         pasex2/px2init_dummy.bin | \
@@ -26,7 +26,7 @@ pas51x.kcc: pas51x.asm pas_gdef.inc pasex2/px2org.inc sozei_dummy.bin
 sozei_dummy.bin: sozei_dummy.asm pas_gdef.inc sozei.inc
 
 clean:
-	-rm -f *~
+	-rm -f *~ *.bin
 
 distclean: clean
-	-rm -f pas51x.kcc
+	-rm -f pas5x.kcc pas5x_pasmo.asm
